odh-manifests/odh-notebook-controller/kf-notebook-controller/overlays/standalone-service-mesh/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: odh-gateway
  namespace: odh-notebook-controller-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: odh-dashboard-cert
    hosts:
    - "*"
