odh-manifests/odh-notebook-controller/kf-notebook-controller/overlays/standalone-service-mesh/gateway-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: opendatahub-odh-gateway
  namespace: istio-system
  labels:
    maistra.io/gateway-name: odh-gateway
    maistra.io/gateway-namespace: odh-notebook-controller-system
spec:
  host: opendatahub.apps-crc.testing
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
